--- a/mine-site/templates/post.html
+++ b/mine-site/templates/post.html
@@ -1,9 +1,10 @@
 <article>
     <section class="header">
-        Posted on $date$
+        发表于 $date$
         $if(author)$
             by $author$
         $endif$
+        位置: <span class='pos'>$pos$ </span>
     </section>
     <section>
         $body$
