--- a/mine-site/css/default.css
+++ b/mine-site/css/default.css
@@ -111,7 +111,6 @@ article .header {
 
 @media (min-width: 640px) {
   body {
-    width: 60rem;
     margin: 0 auto;
     padding: 0;
   }
@@ -146,8 +145,25 @@ img {
 
 .pos {
   cursor: pointer;
+  color: red;
 }
 
 .size75 {
   width: 75px;
+}
+
+.image {
+  height: 200px;
+}
+
+.image img {
+  height: 100%;
+}
+
+ul {
+  list-style: none;
+}
+
+ul li {
+  padding: 10px;
 }
