--- a/mine-site/templates/post.html
+++ b/mine-site/templates/post.html
@@ -1,4 +1,4 @@
-<article>
+<article $if(world)$data-world="$world$"$endif$$if(pos)$ data-pos="$pos$"$endif$>
     <section class="header">
         发表于 $date$
         $if(author)$
